--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
     
     {% block extra_css %}{% endblock %}
 </head>
-<body>
+<body class="d-flex flex-column vh-100" {% if user.is_authenticated %}data-user-id="{{ user.id }}"{% endif %}>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
