--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,11 @@
                                 <i class="fas fa-users me-1"></i>{% trans "Teams" %}
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'docs:index' %}">
+                                <i class="fas fa-book me-1"></i>{% trans "Documentation" %}
+                            </a>
+                        </li>
                     {% endif %}
                 </ul>
                 
